[api] Working on core implementation

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 <title>MiniMongo</title>
 <script src="underscore.js"></script>
+<script src="backbone.js"></script>
 <script src="random.js"></script>
 <script src="synch-queue.js"></script>
 <script src="minimongo.js"></script>
@@ -10,6 +11,7 @@
 <script src="diff.js"></script>
 <script src="ejson.js"></script>
 <script src="oid.js"></script>
+<script src="backbone-mongo-collection.js"></script>
 <script src="app.js"></script>
 </head>
 <body>
