--- a/index.html
+++ b/index.html
@@ -2,16 +2,17 @@
 <html>
 <head>
 <title>MiniMongo</title>
-<script src="underscore.js"></script>
-<script src="backbone.js"></script>
-<script src="random.js"></script>
-<script src="synch-queue.js"></script>
-<script src="minimongo.js"></script>
-<script src="selector.js"></script>
-<script src="diff.js"></script>
-<script src="ejson.js"></script>
-<script src="oid.js"></script>
-<script src="backbone-mongo-collection.js"></script>
+<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script src="components/underscore.js"></script>
+<script src="components/backbone.js"></script>
+<script src="lib/random.js"></script>
+<script src="lib/synch-queue.js"></script>
+<script src="lib/minimongo.js"></script>
+<script src="lib/selector.js"></script>
+<script src="lib/diff.js"></script>
+<script src="lib/ejson.js"></script>
+<script src="lib/oid.js"></script>
+<script src="lib/backbone-mongo-collection.js"></script>
 <script src="app.js"></script>
 </head>
 <body>
