[queries/modifiers] Adding support for a good number of the query and update functions

--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
 <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
 <script src="components/underscore.js"></script>
 <script src="components/backbone.js"></script>
+<script src="lib/deps.js"></script>
 <script src="lib/random.js"></script>
 <script src="lib/synch-queue.js"></script>
 <script src="lib/minimongo.js"></script>
+<script src="lib/minimongo-modify.js"></script>
 <script src="lib/selector.js"></script>
 <script src="lib/diff.js"></script>
 <script src="lib/ejson.js"></script>
