--- a/index.html
+++ b/index.html
@@ -2,22 +2,76 @@
 <html>
 <head>
 <title>MiniMongo</title>
-<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
-<script src="components/underscore.js"></script>
-<script src="components/backbone.js"></script>
-<script src="lib/deps.js"></script>
-<script src="lib/random.js"></script>
-<script src="lib/synch-queue.js"></script>
-<script src="lib/minimongo.js"></script>
-<script src="lib/minimongo-modify.js"></script>
-<script src="lib/selector.js"></script>
-<script src="lib/diff.js"></script>
-<script src="lib/ejson.js"></script>
-<script src="lib/oid.js"></script>
-<script src="lib/backbone-mongo-collection.js"></script>
-<script src="app.js"></script>
+<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
+<link href="components/app.css" rel="stylesheet">
 </head>
 <body>
-<h1>s</h1>
+<div class="jumbotron" id="mongo-hero">
+  <div class="row">
+    <div class="col-9 col-lg-9">
+      <h1>Backbone.MongoCollection</h1>
+    </div>
+   <div class="col-3 col-lg-3">
+      <p class="action_btns">
+        <a class="btn btn-primary btn-large btn-block" href="/TODO-path-to-built-file.js">Download</a>
+        <a class="btn btn-default btn-large btn-block" target="_blank" href="https://github.com/alexhancock/backbone-mongo">Github</a>
+      </p>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-8 col-lg-10" id="desc">
+      <p>
+        <img src="https://magnum.travis-ci.com/alexhancock/backbone-mongo.png?token=AqmVkZFx1y67sssTsTY1&branch=master"></img>
+        Query your Backbone.Collections with the MongoDB API, client or server side.
+      </p>
+    </div>
+  </div>
+</div>
+<div class="row">
+  <div class="col-5 col-lg-5 col-offset-1">
+    <h2>This project is glue between...</h2>
+    <ul>
+      <li>Minimongo - by the Meteor team</li>
+      <li>Backbone.Collections</li>
+    </ul>
+  </div>
+  <div class="col-5 col-lg-5 ">
+    <h2>It does just what you think it does...</h2>
+    <p>
+      You can run mongo queries on your Backbone.Collections, even in your clientside code.
+    </p>
+  </div>
+</div>
+
+<!-- <div class="row">
+  <div class="col-8 col-lg-10 col-offset-1">
+    <h2>Test Console</h2>
+    <p>
+      There is a global defined on this page with some data. It's called "collection". Try out a query, for example...
+      <h4>
+        <code>collection.find({ score: { $gt: 5 }});</code>
+      </h4>
+      <h4>
+        <code>collection.find({ name: "Alex" });</code>
+      </h4>
+    </p>
+    <p>Update and insert operations work as well</p>
+    <h4>
+      <code>collection.insert({ name: "Claire" });</code>
+    </h4>
+    <h4>
+      <code>collection.update({ name: "Alex" }, { $inc: { score: 10 } });</code>
+    </h4>
+  </div>
+  <div class="col-8 col-lg-10 col-offset-1">
+    <div class="jumbotron" contenteditable="true">
+        // Try an example query
+        // TODO
+    </div>
+  </div>
+</div> -->
+
 </body>
+<script data-main="app" src="node_modules/requirejs/require.js"></script>
+<script src="components/require-config.js"></script>
 </html>
