[features] Branch calls to find to call the underscore or minimongo implemenation based on the first arg

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ collection.update({ name: "Alex" }, { $inc: { score: 10 } });</pre>
 </div>
 <div class="row">
   <div class="col-10 col-lg-10 col-offset-1">
-    <h2>Results</h2>
+    <h2>Console Query Result</h2>
     <div class="results jumbotron">
     </div>
   </div>
