[observers] Support observable queries on cursors

--- a/index.html
+++ b/index.html
@@ -78,13 +78,12 @@ people.update({ name: "Alex" }, { $inc: { score: 10 } });</pre>
 </div>
 </body>
 
+<script type="text/javascript" src="http://code.jquery.com/jquery-1.10.2.min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
 <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
 
-<script src="build/backbone-mongo.js"></script>
-<script src="components/jquery.js"></script>
-<script src="components/data.js"></script>
+<!-- <script src="build/backbone-mongo.js"></script> -->
 
-<script src="app.js"></script>
-
+<script data-main="main" src="components/require.js"></script>
+<script src="components/require-config.js"></script>
 </html>
