--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-8 col-lg-10" id="desc">
       <p>
-        <img src="https://magnum.travis-ci.com/alexhancock/backbone-mongo.png?token=AqmVkZFx1y67sssTsTY1&branch=master"></img>
+        <img src="https://travis-ci.com/alexhancock/backbone-mongo.png"></img>
         Query your Backbone.Collections with the MongoDB API
       </p>
     </div>
