[build] Setting up the main build step

--- a/index.html
+++ b/index.html
@@ -77,6 +77,14 @@ people.update({ name: "Alex" }, { $inc: { score: 10 } });</pre>
   </div>
 </div>
 </body>
-<script data-main="main" src="node_modules/requirejs/require.js"></script>
-<script src="components/require-config.js"></script>
+
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/underscore.js/1.5.1/underscore-min.js"></script>
+<script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/backbone.js/1.0.0/backbone-min.js"></script>
+
+<script src="build/backbone-mongo.js"></script>
+<script src="components/jquery.js"></script>
+<script src="components/data.js"></script>
+
+<script src="app.js"></script>
+
 </html>
