--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
    <div class="col-3 col-lg-3">
       <p class="action_btns">
-        <a class="btn btn-primary btn-large btn-block" href="/TODO-path-to-built-file.js">Download</a>
+        <a class="btn btn-primary btn-large btn-block" href="/build/backbone-mongo.js">Download</a>
         <a class="btn btn-default btn-large btn-block" target="_blank" href="https://github.com/alexhancock/backbone-mongo">Github</a>
       </p>
     </div>
@@ -21,7 +21,7 @@
   <div class="row">
     <div class="col-8 col-lg-10" id="desc">
       <p>
-        <img src="https://travis-ci.com/alexhancock/backbone-mongo.png"></img>
+        <img src="https://travis-ci.org/alexhancock/backbone-mongo.png?branch=master"></img>
         Query your Backbone.Collections with the MongoDB API
       </p>
     </div>
