--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </div>
    <div class="col-3 col-lg-3">
       <p class="action_btns">
-        <a class="btn btn-primary btn-large btn-block" href="/build/backbone-mongo.js">Download</a>
+        <a class="btn btn-primary btn-large btn-block" href="http://alexhancock.github.io/backbone-mongo/build/backbone-mongo.js">Download</a>
         <a class="btn btn-default btn-large btn-block" target="_blank" href="https://github.com/alexhancock/backbone-mongo">Github</a>
       </p>
     </div>
