[gh-pages] Update requirejs base url for the demo page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <html>
 <head>
-<title>MiniMongo</title>
+<title>Backbone.Mongo</title>
 <link href="//netdna.bootstrapcdn.com/bootstrap/3.0.0-rc1/css/bootstrap.min.css" rel="stylesheet">
 <link href="components/app.css" rel="stylesheet">
+<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 <div class="jumbotron" id="mongo-hero">
